# backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  logger.py
app/db/: agenda.py  init.py  kv_tools.py  tools.py
app/functions/alm/: call_llm.py
app/functions/alm/prompts/: prompts.py
app/functions/common/: agenda.py  img.py  proxy_manager.py  save_file.py
app/functions/scheduler/: qiandao.py
